[tool.poetry]
name = "ct-continuous-workflows"
version = "0.1.0"
description = "Utility scripts for continuous workflows"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
packaging = "^24.0"
tomli = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
