[tool.poetry]
name = "ct-continuous-workflows"
version = "1.0.0"
description = "Utility scripts for continuous workflows"
authors = []
packages = [{"include" = "ctcw"}]

[tool.poetry.dependencies]
python = "^3.11"
packaging = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-version = "ctcw.scripts.check_version:main"
